Dynamics NAV now also exposes subfamily fetch (`SubFamilyList`) mapped to neutral DTOs.