@@ -1,12 +1,12 @@
 package com.digithink.pos.erp.dynamicsnav.mapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import org.springframework.stereotype.Component;
 
 import com.digithink.pos.erp.dynamicsnav.dto.DynamicsNavFamilyDTO;
+import com.digithink.pos.erp.dynamicsnav.dto.DynamicsNavSubFamilyDTO;
 import com.digithink.pos.erp.dto.ErpItemFamilyDTO;
+import com.digithink.pos.erp.dto.ErpItemSubFamilyDTO;
 
 @Component
 public class DynamicsNavMapper {
@@ -17,7 +17,7 @@ public class DynamicsNavMapper {
 		}
 		return navFamilies.stream()
 				.map(this::toItemFamilyDTO)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	public ErpItemFamilyDTO toItemFamilyDTO(DynamicsNavFamilyDTO navFamily) {
@@ -27,6 +27,26 @@ public class DynamicsNavMapper {
 		dto.setName(navFamily.getDescription());
 		dto.setDescription(navFamily.getDescription());
 		dto.setActive(true);
+		return dto;
+	}
+
+	public List<ErpItemSubFamilyDTO> toItemSubFamilyDTOs(List<DynamicsNavSubFamilyDTO> navSubFamilies) {
+		if (navSubFamilies == null) {
+			return List.of();
+		}
+		return navSubFamilies.stream()
+				.map(this::toItemSubFamilyDTO)
+				.toList();
+	}
+
+	public ErpItemSubFamilyDTO toItemSubFamilyDTO(DynamicsNavSubFamilyDTO navSubFamily) {
+		ErpItemSubFamilyDTO dto = new ErpItemSubFamilyDTO();
+		dto.setExternalId(navSubFamily.getCode());
+		dto.setCode(navSubFamily.getCode());
+		dto.setName(navSubFamily.getDescription());
+		dto.setDescription(navSubFamily.getDescription());
+		dto.setActive(true);
+		dto.setFamilyExternalId(navSubFamily.getFamilyCode());
 		return dto;
 	}
 }
